# easymake

./: .gitignore  Cargo.toml  Emakefile  README.md
docs/: _config.yml  actions.md  emake_folder.md  readme.md  secrets.md  targets.md  types.md
docs/actions/: archive.md  copy.md  extract.md  git_clone.md  move.md  remove.md  shell.md
docs/assets/templates/: actions.md.jinja  targets.md.jinja
docs/secrets/: keyring.md  plain.md
documentation/: astro.config.mjs  package-lock.json  package.json  targets.md
documentation/actions/: archive.md  cmd.md  copy.md
documentation/src/content/docs/: index.mdx
documentation/src/content/docs/guides/: create_targets.md  paths_syntax.mdx  use_secrets.md  use_variables.md
documentation/src/content/docs/reference/: actions.md  secrets.md  types.md
documentation/src/content/docs/reference/actions/: archive.md  copy.md  extract.md  git_clone.md  move.md  remove.md  shell.md  yaml.md
documentation/src/content/docs/reference/secrets/: keyring.md  plain.md
documentation/src/content/docs/start_here/: command_line.md  first_steps.md  getting_started.md  installation.md
examples/actions/: Emakefile
examples/keyring/: Emakefile
examples/my-project/: Emakefile
examples/my-project/.emake/footprints/_targets_/my_first_target/: 0
examples/my-project/.emake/footprints/_targets_/prepare_archive/: 0
examples/my-project/.emake/footprints/archive/_targets_/prepare_archive/: 0
examples/my-project/archive/: Emakefile
examples/simple-project-cpp/: Emakefile
examples/simple-project-cpp/.emake/home/hawk/development/easybuild/examples/simple-project-cpp/main.o/: time
examples/simple-project-cpp/.emake/home/hawk/development/easybuild/examples/simple-project-cpp/math.o/: time
examples/simple-project-cpp/.emake/home/hawk/development/easybuild/examples/simple-project-cpp/simple.exe/: time
examples/simple-project-cpp/src/: main.cpp  math.cpp  math.hpp  math.hpp.gch
examples/test/: Emakefile
examples/tokens/: Emakefile
lib/config-macros/: Cargo.toml
lib/config-macros/src/: lib.rs  secrets.rs
my-project/: Emakefile
my-project/.emake/footprints/_targets_/my_first_target/: 1
scripts/install/linux/: env  install.sh
src/: actions.rs  cache.rs  commands.rs  console.rs  credentials.rs  doc.rs  emake.rs  errors.rs  graph.rs  main.rs  plugins.rs  secrets.rs  utils.rs
src/actions/: archive.rs  cmd.rs  copy.rs  extract.rs  git_clone.rs  mv.rs  remove.rs  shell.rs  target.rs  yaml.rs
src/commands/: build.rs  clean.rs  doc.rs  graph.rs  init.rs  keyring.rs
src/console/: log.rs  logger.rs  progress_bar.rs
src/credentials/: plain.rs
src/doc/: action.rs  secret.rs
src/emake/: compiler.rs  loader.rs
src/errors/: loop_error.rs  target_not_found_error.rs
src/graph/: analysor.rs  common.rs  generator.rs  runner.rs  viewer.rs
src/plugins/: cmd.rs  docker.rs
src/secrets/: keyring.rs  plain.rs
(+4 files in other folders)
