[package]
name = "easybuild"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
client = "0.1.1-beta1"
colored = "3.0.0"
dashmap = "6.1.0"
glob = "0.3.2"
hex = "0.4.3"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.12"
saphyr = "0.0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
sha2 = "0.10.8"
sha256 = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
url = "2.5.4"

[[bin]]
name = "easybuild"
path = "src/main.rs"
