[package]
name = "easybuild"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.32", features = ["derive"] }
client = "0.1.1-beta1"
colored = "3.0.0"
console = "0.16.0"
crossterm = "0.29.0"
dashmap = "6.1.0"
flate2 = "1.1.2"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
indicatif = "0.18.0"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
saphyr = "0.0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
sha2 = "0.10.8"
sha256 = "1.5.0"
tar = "0.4.44"
terminal_size = "0.4.2"
textwrap = "0.16.2"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
url = "2.5.4"
xz2 = "0.1.7"
zip = "0.6"

[[bin]]
name = "easybuild"
path = "src/main.rs"
